<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:isScrollContainer="false">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/search_constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="Search For Patient"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_patient"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:drawableLeft="@drawable/icon_user"
            android:ems="10"
            android:hint="User"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_title" />

        <Button
            android:id="@+id/careprovider_search_for_patient_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/gradient"
            android:text="SEARCH"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_patient" />

        <ImageButton
            android:id="@+id/qr_button"
            android:layout_width="134dp"
            android:layout_height="142dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@color/background2"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/careprovider_search_for_patient_button"
            app:srcCompat="@drawable/qr_code_button">
        </ImageButton>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/search_display_patient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/patient_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="110dp"
            android:background="@color/background"
            android:src="@android:drawable/sym_def_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/patient_username"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_white_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColorHint="#999999"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_image" />


        <TextView
            android:id="@+id/patient_email"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_white_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icon_email"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColorHint="#999999"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_username"/>

        <TextView
            android:id="@+id/search_phone"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_white_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColorHint="#999999"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_email" />

        <Button
            android:id="@+id/search_add_patient_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/gradient_main"
            android:text="ADD"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_phone" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

